<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/mainBackground"
    android:padding="20dp"
    android:gravity="center_horizontal"
    >

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/registrationHintEmail"
            android:inputType="textEmailAddress"
            android:layout_marginTop="70dp"
            android:id="@+id/userEmail"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/registrationName"
            android:id="@+id/userName"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:hint="@string/registrationPassword"
            android:id="@+id/userPassword"
            android:inputType="textPassword"
            />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/registrationSignUp"
            android:id="@+id/addRegistrationButton"
            android:layout_marginTop="30dp"
            android:textColor="@color/textWelcome"
            android:background="@drawable/button_background"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:text="@string/haveAccount"
            />

        <Button
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:text="@string/singInButton"
            android:id="@+id/singIn"
            android:textColor="@color/textWelcome"
            android:background="@drawable/button_background"
            />

</LinearLayout>