<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@color/mainBackground"
    >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        >

        <TextView
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:text="@string/welcomeText"
            android:gravity="center"
            android:layout_marginTop="100dp"
            android:layout_marginBottom="50dp"
            android:background="@color/backgroundWelcome"
            android:textSize="25sp"
            android:textColor="@color/textWelcome"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/userNameHint"
            android:id="@+id/userEmail"
            android:inputType="textEmailAddress"
            />

        <EditText
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:width="200dp"
            android:hint="@string/userPasswordHint"
            android:inputType="textPassword"
            android:id="@+id/userPassword"
            />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/singInButton"
            android:id="@+id/singIn"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_background"
            android:textColor="@color/textWelcome"
            />

        <LinearLayout
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="50dp"
            android:background="@drawable/regist"
            android:padding="10dp"
            android:gravity="center_horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registerTextView"
                android:textSize="20sp"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/registerButton"
                android:id="@+id/registration"
                android:background="@drawable/button_background"
                android:textColor="@color/textWelcome"
                />

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
